corrected partner tools by warehouse

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -684,10 +684,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]\n",
     "\n",
-    "df_titles=df['warehouse_name'].unique()\n",
-    "# print(df_titles)\n",
-    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]\n"
+    "\n"
    ]
   },
   {
@@ -696,9 +695,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(df_titles)):\n",
-    "    fig = px.area(df_warehouse[i], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[i])\n",
-    "    fig.show()\n"
+    "\n",
+    "fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DAILY_REFRESH_WH\")\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -707,8 +706,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[0])\n",
-    "# fig.show()"
+    "fig = px.area(df_warehouse[1], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DEV_WH\")\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -717,8 +716,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig = px.area(df_warehouse[1], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[1])\n",
-    "# fig.show()\n"
+    "fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"ML_WH\")\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -727,18 +726,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[2])\n",
-    "# fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=df_titles[3])\n",
-    "# fig.show()\n"
+    "fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
+    "fig.show()\n"
    ]
   },
   {
@@ -790,13 +779,6 @@
    "source": [
     "#TODO: Implement cost of data transfers query using https://docs.snowflake.com/en/user-guide/cost-exploring-data-transfer.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
