message for saravana

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -514,6 +514,7 @@
     "    \n",
     "* Total credit consumption for all the warehouses combined is lower compared to total credit consumption overall and total credit consumption for all users combined.\n",
     "    * This is because [warehouse metering history](https://docs.snowflake.com/en/sql-reference/functions/warehouse_metering_history.html) returns results only for the ACCOUNTADMIN role or any role that has been explicitly granted the MONITOR USAGE global privilege. \n",
+    "    * #TODO: @Saravana - why did Snowflake set it up this way?\n",
     "  \n",
     "* PROD_WH incurs highest and > 50% of the costs at ~ 3110 credits.\n",
     "* DEV_WH consumes next highest ~30% at ~ 1872 credits.\n",
