--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -31,7 +31,6 @@
    "source": [
     "# Setting up displays\n",
     "from IPython.display import display, HTML\n",
-    "\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "from dash import Dash,html,dcc,Input,Output\n",
     "app = Dash(__name__)\n",
@@ -106,12 +105,10 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-09-12'\n",
+    "sdate = '2022-01-27'\n",
     "edate = '2022-10-12'\n",
-    "\n",
-    "\n",
     "# Most recent rolling month that we have data for\n",
-    "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
+    "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
   {
@@ -138,24 +135,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### STANDARD DEVIATION AND MEAN OF CREDITS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=qlib.total_breakdown_analysis(sdate,edate)\n",
-    "print(df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -170,8 +149,7 @@
    "source": [
     "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
     "df = df.fillna('Unassigned')\n",
-    "df.head()\n",
-    "\n"
+    "# df.to_csv('/home/manas/DS_data/breakdown.csv')\n"
    ]
   },
   {
@@ -181,7 +159,16 @@
    "outputs": [],
    "source": [
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "df_by_usage_category.head()\n",
+    "df_by_usage_category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
     "df_by_usage_category.loc[len(df.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
     "df_by_usage_category = df_by_usage_category.round(2)\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))"
@@ -561,7 +548,7 @@
    "outputs": [],
    "source": [
     "df=qlib.cost_by_partner_tool_ts(sdate, edate)\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
@@ -672,64 +659,11 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### COST OF PARTNER TOOLS BY WAREHOUSES"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DAILY_REFRESH_WH\")\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_warehouse[1], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DEV_WH\")\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"ML_WH\")\n",
-    "fig.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
-    "fig.show()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -780,11 +714,18 @@
    "source": [
     "#TODO: Implement cost of data transfers query using https://docs.snowflake.com/en/user-guide/cost-exploring-data-transfer.html"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -798,11 +739,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
