added cost_by_user function which gives aggregate - to be converted to timeseries

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -321,6 +321,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = qlib.cost_by_user_ts(sdate, edate)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_by_user = df.groupby(['user_name']).sum('numeric_only').reset_index()\n",
     "df_by_user = df_by_user.round(2)\n",
     "df_by_user.loc[len(df.index)] = ['Total', df_by_user['credits'].sum(), df_by_user['dollars'].sum()]\n",
