--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -105,7 +105,7 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-01-27'\n",
+    "sdate = '2022-09-12'\n",
     "edate = '2022-10-12'\n",
     "# Most recent rolling month that we have data for\n",
     "# print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
@@ -158,8 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "df_by_usage_category"
+    "# df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
+    "# df_by_usage_category"
    ]
   },
   {
@@ -333,7 +333,7 @@
    "source": [
     "df_by_user = df.groupby(['user_name']).sum('numeric_only').reset_index()\n",
     "df_by_user = df_by_user.round(2)\n",
-    "df_by_user.loc[len(df.index)] = ['Total', df_by_user['credits'].sum(), df_by_user['dollars'].sum()]\n",
+    "df_by_user.loc[len(df.index)] = ['Total', df_by_user['approximate_credits_used'].sum()]\n",
     "print(tabulate(df_by_user, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -345,13 +345,13 @@
    "source": [
     "df_by_user.drop(df_by_user.tail(1).index,inplace=True)\n",
     "fig = make_subplots(\n",
-    "    rows=1, cols=2,\n",
-    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
-    "    subplot_titles=(\"Dollars\", \"Credits\")\n",
+    "    rows=1, cols=1,\n",
+    "    specs=[[{\"type\": \"pie\"}]],\n",
+    "    subplot_titles=(\"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['dollars'].tolist(),name=\"Dollars\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['approximate_credits_used'].tolist(),name=\"Credits\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
+    "# fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -370,17 +370,8 @@
    "outputs": [],
    "source": [
     "df_by_user_ts = df.groupby(['user_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_user_ts, x=\"hourly_start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_by_user_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.head()"
    ]
   },
   {
