add partner tool plots from earlier

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -350,7 +350,7 @@
     "    subplot_titles=(\"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['approximate_credits_used'].tolist(),name=\"Credits\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['approximate_credits_used'].tolist(),name=\"Credits\", rotation=270,marker_colors=color_scheme),row=1,col=1)\n",
     "# fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
@@ -616,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Analyze if a specific client tool is attached with a specific warehouse. For each warehouse what percentage of credits are used by which tool?"
+    "df_warehouse = [d for _, d in df.groupby(['warehouse_name'])]"
    ]
   },
   {
@@ -625,37 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_pt_wh_ts = df.groupby(['client_application_name', 'warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
-    "df_by_pt_wh_ts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_pt_wh_ts[\"client_application_warehouse_name\"] = df_by_pt_wh_ts[\"client_application_name\"] + \"_\" + df_by_pt_wh_ts[\"warehouse_name\"]\n",
-    "df_by_pt_wh_ts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_pt_wh_ts = df_by_pt_wh_ts.groupby([\"client_application_warehouse_name\",\"hourly_start_time\"]).sum(\"numeric_only\").reset_index()\n",
-    "df_by_pt_wh_ts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.area(df_by_pt_wh_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_warehouse_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DAILY_REFRESH_WH\")\n",
     "fig.show()"
    ]
   },
@@ -664,7 +634,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = px.area(df_warehouse[1], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DEV_WH\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.area(df_warehouse[2], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"ML_WH\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.area(df_warehouse[3], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"PROD_WH\")\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -715,13 +708,6 @@
    "source": [
     "#TODO: Implement cost of data transfers query using https://docs.snowflake.com/en/user-guide/cost-exploring-data-transfer.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
