Made changes to query notebook for Saravanan to take a look at

--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -131,7 +131,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_expensive_queries(sdate,edate,5)\n",
-    "# df.to_csv('/home/manas/DS_data/most_expensive.csv')\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -190,6 +190,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO: @Saravana To take a look at expensive queries \n",
+    "#### Saravana notes\n",
+    "\n",
+    "* Remove nodes column \n",
+    "* Q1 - more credits, small warehouse (double wh when query hits and then decrease it)\n",
+    "* Check if Q1, Q2 are running how many times\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,7 +234,7 @@
     "### ANALYSIS\n",
     "\n",
     "* Has an execution time of 670 mins.\n",
-    "* SELECT statement\n",
+    "* Consumes 22.33 credits.\n",
     "* Multiple JOIN statements in query.\n",
     "* Most partitions are scanned.\n",
     "* Executed using a SMALL warehouse.\n",
@@ -251,6 +265,7 @@
    "source": [
     "### ANALYSIS\n",
     "* Execution time of 357 mins.\n",
+    "* Consumes 11.92 credits\n",
     "* FAILED query.\n",
     "* Large number of bytes are spilled to both local (4719 GB) and remote (4491 GB) storage.\n",
     "* Multiple JOIN statements in query.\n",
@@ -283,7 +298,7 @@
    "source": [
     "### ANALYIS\n",
     "* Same query ran multiple times.\n",
-    "* UPDATE query\n",
+    "* This UPDATE query also is the longest running query.\n",
     "* Has execution time of 37 mins.\n",
     "* Execution time remains constant.\n",
     "* 146 GB of bytes scanned\n",
@@ -296,13 +311,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OPTIML RECOMMENDATIONS\n",
+    "### ANALYSIS AND RECOMMENDATIONS\n",
     "\n",
     "* PROD_WH can be scaled out as multicluster as large amount of data is being computed with several users using them.\n",
     "* Defining clustering keys will help with reducing number of partitions in the table being scanned.\n",
     "* Scaling up is also required for PROD_WH as bytes are being spilled causing failure of query.\n",
-    "* Update query not being cached enough, therefore autosuspension happens too quickly or cache needs to be built before running this query.\n",
-    "* Optimizing SELECT query by eliminating multiple JOINS, SELECT clauses."
+    "* Query 3 is expensive because it has the longest execution time.\n",
+    "\n",
+    "Query Optimization:\n",
+    "* Querys 1 and 2 use multiple JOIN statements and WHERE predicaments. This can be eliminated and made into a Materialized View/Table.\n",
+    "* QUery 3 recommendations are given under \"LONGEST RUNNING QUERIES\" section"
    ]
   },
   {
@@ -319,6 +337,7 @@
    "outputs": [],
    "source": [
     "df=qlib.n_queries_spill_to_storage(sdate,edate,5)\n",
+    "# df.to_csv('/home/manas/DS_data/spill_storage.csv')\n",
     "df.head()\n",
     "\n",
     "\n"
@@ -393,6 +412,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "* Execution time of 29 minutes.\n",
+    "* Failed Query\n",
+    "* 300 GB spilling to local storage and 200 GB to remote storage.\n",
+    "* Most partitions are scanned in tha table.\n",
+    "* 155 GB of data scanned.\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -406,6 +438,24 @@
    "outputs": [],
    "source": [
     "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "\n",
+    "* Execution time of 29 mins.\n",
+    "* Failed query.\n",
+    "* 170 GB splilling to local storge and 90 GB to remote.\n",
+    "* Most partitions are scanned in the table.\n",
+    "* 43 GB of data is scanned.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -425,23 +475,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ANALYSIS\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    " Queries 1,2 and 3 fail after execution time for each being 29 minutes.\n",
-    "* Query 1 (query_id: 01a78b77-0604-f44d-0000-08d15ddd870e) - 300 GB spilling to local storage and 200 GB to remote storage.\n",
-    "* Query 2 (query_id: 01a78b55-0604-f44e-0000-08d15ddd55da) - 170 GB splilling to local storge and 90 GB to remote.\n",
-    "* Query 3 (query_id: 01a78b55-0604-f44e-0000-08d15ddd55d6) - 245 GB spilling to local and 78 GB to remote storage.\n",
-    "\n",
-    "Most partitions are scanned in the table for these 3 queries.\n",
-    "There are also multiple join and select statements for each query.\n",
-    "</div>\n",
-    "\n",
-    "\n"
+    "#### ANALYSIS\n",
+    "* Execution time of 29 mins.\n",
+    "* Failed query.\n",
+    "* 245 GB spilling to local and 78 GB to remote storage.\n",
+    "* Most partitions are scanned in this table.\n",
+    "* 186 GB of data is scanned.\n",
+    "* Same JOIN statements as QUERY 1."
    ]
   },
   {
@@ -453,24 +497,27 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "    \n",
-    "* Check if best virtual warehouse practices can be applied to most queries in this warehouse\n",
+    "* Check if best virtual warehouse practices can be applied to most queries in this warehouse.\n",
     "</div>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Optiml Recommendation\n",
+    "### Actions and Recommendation\n",
     "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -479,11 +526,35 @@
     "\n",
     "* Utilize a larger warehouse - Warehouse sizes of Xsmall and Small are used. 100's of GB are spilled due to insufficient resources. \n",
     "\n",
-    "* Optimize the query - Reducing the number of JOINS, SELECT and UNION statements would improve the performance.\n",
-    "\n",
     "* Reduce the data that is being processed (Ex: Redunant columns used in computation).\n",
     "\n",
-    "* Split processing into multiple steps."
+    "* Split processing into multiple steps.\n",
+    "\n",
+    "* Inefficient pruning as well. Cluster keys can be defined for tables\n",
+    "\n",
+    "Query Optimization\n",
+    "\n",
+    "* Consider eliminating JOINS by making data used in JOINS as a table.\n",
+    "* Use UNION ALL instead of OR for filter predicaments (WHERE clause).\n",
+    "* Use UNION ALL instead of UNION.\n",
+    "* Use WHERE instead of HAVING (revisit)\n",
+    "\n",
+    "* Instead of creating temporary tables WITH AS clause can be utilized.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO: @Saravana Take a look at the queries and the analysis, combine with warehouse utilization\n",
+    "#### Saravana Notes\n",
+    "\n",
+    "* Continous remote spill in each hour, warehouse is heavily used\n",
+    "* Remote spillage is high - increase war\n",
+    "* Optimize remote spilling \n",
+    "\n"
    ]
   },
   {
@@ -500,7 +571,8 @@
    "outputs": [],
    "source": [
     "df=qlib.n_queries_scanned_most_data(sdate,edate,5)\n",
-    "df.head() "
+    "# df.to_csv('/home/manas/DS_data/scanned_date.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -574,15 +646,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
-    "* Execution time is 3.5 minutes.\n",
-    "* 2 GB is spilled onto local storage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Query 2"
    ]
   },
@@ -600,15 +663,6 @@
    "metadata": {},
    "source": [
     "### ANALYSIS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
-    "* Execution time is 7.7 minutes.\n",
-    "* 16.9 GB is spilled onto local storage."
    ]
   },
   {
@@ -635,30 +689,46 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Queries are the same\n",
     "* Inadequte pruning is observed. 99% of the partitions on the table are scanned.\n",
-    "* Execution time is 3.5 minutes.\n",
-    "* 2 GB is spilled onto local storage."
+    "* Credits consumed are constant throughout, irrespective of warehouse size.\n",
+    "* Execution time is 3.5 minutes for MEDIUM warehouse and is 7 minutes for SMALL warehouse.\n",
+    "* When this query is run on SMALL warehouse, 17 GB is spilled onto local storage but when it is run on MEDIUM only 2GB is spilled.\n",
+    "\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OPTIML Recommendations"
+    "### Actions and Recommendations"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Queries are the same.\n",
+    "\n",
     "* Cluster keys can be defined to reduce partitions scanned. \n",
-    "* Choose cluster key that appears frequently in a WHERE clause\n",
-    "* Scaling up warehouse would reduce bytes splilling to local storage\n",
-    "* Query can be optimized by reducing number of JOIN statements, eliminating redundant SELECT statements and using DISTINCT clauses."
+    "* Choose cluster key that appears frequently in a WHERE clause.\n",
+    "* Create cluster key for table KIVA_PROD.DBT_MATERIALIZED.dbt_stg_snowplow_event.\n",
+    "* Scaling up warehouse benifits the query as it runs faster and with same credits consumed.\n",
+    "* Query can be optimization by reducing the number of JOIN statements. \n",
+    "* Can create cluster key on timestamp fields"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TODO: @Saravana To provide recommendations for reducing partitions % for specific query to improve speed of query\n"
    ]
   },
   {
@@ -675,7 +745,8 @@
    "outputs": [],
    "source": [
     "df=qlib.n_most_cached_queries(sdate,edate,5)\n",
-    "df.head() \n"
+    "df.head()\n",
+    "\n"
    ]
   },
   {
@@ -762,6 +833,47 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analysis\n",
+    "* Most cached queries are from tables dbt_materialized.dbt_dim_login_pref_query and dbt_materialized.dbt_dim_direct_loan dl\n",
+    "* Most cached queries are not the most executed ones."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Actions and Recommendations\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Data from these tables should be accurate.\n",
+    "* High trust on tables is necessary.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saravana notes\n",
+    "\n",
+    "* Make sure data is accurate, is fresh, data quality is high (query)\n",
+    "* Most viewed tables (High trust on tables) - by people or downstream processes (can ask)\n",
+    "* Query count \n",
+    "* Check if most executed queries are in cached queries"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -774,10 +886,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.n_most_executed_select_queries(sdate,edate,10)\n",
-    "# df.to_csv(\"/home/manas/DS_data/most_executed_select.csv\")\n",
-    "df.head() \n",
-    "\n"
+    "df=qlib.n_most_frequently_executed_select_queries(sdate,edate,10)\n",
+    "df.head()\n"
    ]
   },
   {
@@ -838,6 +948,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "* Query 1 was executed 116028 cumulatively in 30 days. It takes approximately 43 milliseconds to run."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -851,6 +970,15 @@
    "outputs": [],
    "source": [
     "print(df.iloc[1][\"query_text\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ANALYSIS\n",
+    "* Query 2 was executed 19770 in 30 days. It takes approximately 52 milliseconds to run."
    ]
   },
   {
@@ -875,9 +1003,7 @@
    "metadata": {},
    "source": [
     "### ANALYSIS\n",
-    "* Query 1 was executed 116028 in 30 days\n",
-    "* Query 2 was executed 19770 in 30 days\n",
-    "* Query 3 was executed 13815 in 30 days."
+    "* Query 3 was executed 13815 in 30 days. It takes approximately 47 milliseconds to run"
    ]
   },
   {
@@ -894,6 +1020,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Saravana notes\n",
+    "* Query takes this milliseconds, runs these many times, if it runs at high peak time dither it to low peak time.\n",
+    "* SELECT CS, REGION - find users - most frequent queries are executed by these users\n",
+    "* How many times, type of users, link cost analysis dashboard here \n",
+    "* If more credits are consumed by users for these queries, build MV and caching\n",
+    "* If average time is in milliseconds then it doesnt matter\n",
+    "* Credits these queries consime"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## MOST EXECUTED QUERIES\n"
    ]
   },
@@ -903,8 +1043,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=qlib.caching_warehouse(sdate,edate,5)\n",
-    "df.head()"
+    "df=qlib.n_most_executed_queries(sdate,edate,5)\n",
+    "df.to_c"
    ]
   },
   {
@@ -980,11 +1120,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "* Queries are the same.\n",
     "* Updating event query.\n",
+    "* 150 GB of data is scanned by this query.\n",
+    "* On average 220,000 rows are updated.\n",
     "* Execution time for query is approximately 135 minutes.\n",
     "* 65% of total partitions of table are scanned.\n",
     "* No spillage onto local or remote storage.\n",
@@ -1006,12 +1149,35 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OPTIML Recommendations\n",
+    "### Actions and Recommendations\n",
     "* Cluster keys can be defined to reduce execution time. WHERE clause present in query can be utilized.\n",
-    "* Warehouse scaling up won't help with performance.\n"
+    "* Consider replacing update statement with a BULK-INSERT operation. (Delete and Insert)(Valid from and Valid To columns)(SCD type modelling)\n",
+    "(Mark column as invalid)\n",
+    "* If UPDATE is used, UPDATE in batches or bulk rather than row by row\n",
+    "* Do updates during low peak usage times to minimize blocking of other processes.\n",
+    "* Combining both JOIN and UPDATE together would prove inefficient. Do them seperately (Ask)\n",
+    "* Remove index key columns from update statement. You can add them later after execution of query.\n",
+    "* Try minimizing transaction size for optimizing query.\n",
+    "* SCD 2 model can be implemented to preserve historical data\n",
+    "* Data can be archived based on business policy.\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes from Saravanan:\n",
+    "\n",
+    "* SCD 2 - to keep the history (instead of update\n",
+    "* General rule in DWH is not to delete/update in order not to lose history\n",
+    "* We can archive the data later based on the business policy\n",
+    "https://www.sqlshack.com/implementing-slowly-changing-dimensions-scds-in-data-warehouses/"
    ]
   },
   {
@@ -1024,20 +1190,6 @@
     "  * Look at the amount of data the queries are operating on to see if it passes the sniff test\n",
     "  * Idenitfy causes of credit consumption e.g. using INSERT instead of COPY_TO"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
