adding TODO action items for query analysis

--- a/notebooks/kiva/cost_analysis.ipynb
+++ b/notebooks/kiva/cost_analysis.ipynb
@@ -625,6 +625,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##TODO: Convert these to subplots so they dont have to be called separately\n",
     "fig = px.area(df_warehouse[0], x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme,title=\"DAILY_REFRESH_WH\")\n",
     "fig.show()"
    ]
