--- a/notebooks/kiva/query_analysis.ipynb
+++ b/notebooks/kiva/query_analysis.ipynb
@@ -105,8 +105,8 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-10-01'\n",
-    "edate = '2022-10-31'\n",
+    "sdate = '2022-09-12'\n",
+    "edate = '2022-10-12'\n",
     "print(f\"The analysis is carried our for date range {sdate} to {edate}\")"
    ]
   },
@@ -180,7 +180,15 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##TODO: @Saravana to check if query 0 and query 1 were repeated using query hash"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -213,7 +221,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -245,7 +252,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -277,7 +283,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -292,7 +297,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -431,7 +435,8 @@
     "### ANALYSIS\n",
     "\n",
     "<div class=\"alert alert-info\">\n",
-    "\n",
+    "##TODO: @Saravana sum local and remote query spillage and plot a graph against warehouse to see which warehouse should be upgraded.\n",
+    "    \n",
     " Queries 1,2 and 3 fail after execution time for each being 29 minutes.\n",
     "* Query 1 (query_id: 01a78b77-0604-f44d-0000-08d15ddd870e) - 300 GB spilling to local storage and 200 GB to remote storage.\n",
     "* Query 2 (query_id: 01a78b55-0604-f44e-0000-08d15ddd55da) - 170 GB splilling to local storge and 90 GB to remote.\n",
@@ -654,6 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##TODO: @saravana Look at the wording on the recommendations and update them approrpriately - create cluster keys on time stamps\n",
     "* Queries are the same.\n",
     "* Cluster keys can be defined to reduce partitions scanned. \n",
     "* Choose cluster key that appears frequently in a WHERE clause\n",
@@ -765,6 +771,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Recommendations:\n",
+    "\n",
+    "##TODO: @saravana to word recommendations appropriately and also recommend further analysis if any.\n",
+    "\n",
+    "1) We need high reliability on most cached queries - since they are most used\n",
+    "2) Also same holds for most executed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Most executed 'select' queries -- update this for select statements"
    ]
   },
@@ -776,14 +794,15 @@
    "source": [
     "df=qlib.n_most_executed_select_queries(sdate,edate,10)\n",
     "# df.to_csv(\"/home/manas/DS_data/most_executed_select.csv\")\n",
-    "df.head() \n",
-    "\n"
+    "df.head() "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##TODO: @saravana to put query filter rules so that this particular section surfaces the right reelvant queries for most executed"
+   ]
   },
   {
    "cell_type": "code",
@@ -870,7 +889,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -881,7 +899,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -890,7 +907,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -976,7 +992,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ANALYSIS"
+    "### ANALYSIS\n",
+    "\n",
+    "##TODO: @Saravana make a recommendation on how we recommend them to use SCD type 2 architecture"
    ]
   },
   {
@@ -1056,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
